--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
-# Build & test AL
-script: sh -c 'cd AL/TP1 && mvn compile && mvn test'
-# TODO build JXW, test JXW
+script:
+  # Build & test AL
+  - sh -c 'cd AL/TP1 && mvn compile && mvn test'
+  # Build & test JXW
+  - sh -c 'cd JXW/TP1 && mvn compile && mvn test && mvn site'
+  - sh -c 'cd JXW/TP2/WSConcatClient && mvn compile && mvn test'
+  - sh -c 'cd JXW/TP2/WSConcatService && mvn compile && mvn test'
 # TODO build SPP, test SPP
