--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ script:
   # TODO - sh -c 'cd JXW/TP3/gandi && mvn compile && mvn test' (failed because we do not run jetty...)
   #TODO fix WSDL  - sh -c 'cd JXW/TP2/WSConcatClient && mvn compile && mvn test'
   - sh -c 'cd JXW/TP2/WSConcatService && mvn compile && mvn test'
+  - sh -c 'cd JXW/TP4/jaxb && mvn compile && mvn test'
   # Build & test MDI
   - sh -c 'cd MDI/MDITP12 && mvn compile && mvn test'
