--- a/AL/docker/MiddleTier/Dockerfile
+++ b/AL/docker/MiddleTier/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu
 
-RUN apt-get -y update && apt-get install -y software-properties-common 
+RUN apt-get -y update && apt-get install -y software-properties-common --fix-missing
 RUN add-apt-repository ppa:cwchien/gradle && apt-get -y update
 RUN apt-get install -y git gradle
 RUN apt-get update && apt-get install -y openjdk-7-jdk
@@ -8,3 +8,4 @@ RUN git clone https://github.com/Netflix/recipes-rss.git
 WORKDIR recipes-rss
 RUN ./gradlew clean build
 ENV APP_ENV=dev
+EXPOSE 80 8080 8000
